--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.prorpjet.ProRPjet</exec.mainClass>
     </properties>
+    <name>proRPjetVrai</name>
 </project>
